--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "json-server",
   "version": "1.0.0",
   "description": "Example JSON server for RiveScript",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
