--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon"
   },
   "author": "",
   "license": "MIT",
@@ -13,6 +14,7 @@
     "body-parser": "~1.18.3",
     "cors": "^2.8.5",
     "express": "~4.16.3",
+    "nodemon": "^1.19.1",
     "rivescript": "^2.0.0"
   }
 }
